RESOLVED FIXED309775
[GBM] BitmapTexture create with EGL image doesn't have a valid size
https://bugs.webkit.org/show_bug.cgi?id=309775
Summary [GBM] BitmapTexture create with EGL image doesn't have a valid size
Carlos Garcia Campos
Reported 2026-03-12 03:26:44 PDT
We should pass the size as parameter like the other BitmapTexture constructor.
Attachments
Carlos Garcia Campos
Comment 1 2026-03-12 03:28:22 PDT
EWS
Comment 2 2026-03-12 08:11:56 PDT
Committed 309145@main (74bc500e9a42): <https://commits.webkit.org/309145@main> Reviewed commits have been landed. Closing PR #60445 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-03-12 08:12:13 PDT
Note You need to log in before you can comment on or make changes to this bug.