Source/WebCore/platform/graphics/texmap/BitmapTexture.h
@@ -71,9 +71,9 @@ public:
     }
 
 #if USE(GBM)
-    static Ref<BitmapTexture> create(EGLImage image, OptionSet<Flags> flags = { })
+    static Ref<BitmapTexture> create(EGLImage image, const IntSize& size, OptionSet<Flags> flags = { })
     {
-        return adoptRef(*new BitmapTexture(image, flags));
+        return adoptRef(*new BitmapTexture(image, size, flags));
     }
 #endif
 
@@ -115,7 +115,7 @@ public:
 private:
     BitmapTexture(const IntSize&, OptionSet<Flags>);
 #if USE(GBM)
-    BitmapTexture(EGLImage, OptionSet<Flags>);
+    BitmapTexture(EGLImage, const IntSize&, OptionSet<Flags>);
 #endif
 
     void clearIfNeeded();
